Feat: 탭바 컨트롤러 세팅
- 탭바 컨트롤러 세팅

--- a/jaksim_ios/Home/View/Home.storyboard
+++ b/jaksim_ios/Home/View/Home.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="NbB-qi-0Zd">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="WpP-RV-4ll">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item-->
+        <!--Home View Controller-->
         <scene sceneID="2bT-0h-hno">
             <objects>
                 <viewController storyboardIdentifier="HomeViewController" id="kl2-x8-dQf" customClass="HomeViewController" customModule="jaksim_ios" customModuleProvider="target" sceneMemberID="viewController">
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XUW-JD-eRh">
-                                <rect key="frame" x="0.0" y="88" width="414" height="701"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AV0-vq-nCU">
                                         <rect key="frame" x="354" y="16" width="40" height="40"/>
@@ -191,7 +191,7 @@
                         <viewLayoutGuide key="safeArea" id="ApO-3q-CJL"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="ApO-3q-CJL" firstAttribute="bottom" secondItem="XUW-JD-eRh" secondAttribute="bottom" constant="24" id="0xD-ms-uN5"/>
+                            <constraint firstItem="ApO-3q-CJL" firstAttribute="bottom" secondItem="XUW-JD-eRh" secondAttribute="bottom" id="0xD-ms-uN5"/>
                             <constraint firstItem="XUW-JD-eRh" firstAttribute="width" secondItem="ApO-3q-CJL" secondAttribute="width" id="JBH-2J-8cP"/>
                             <constraint firstItem="ApO-3q-CJL" firstAttribute="leading" secondItem="XUW-JD-eRh" secondAttribute="leading" id="OIX-ex-KZV"/>
                             <constraint firstItem="ApO-3q-CJL" firstAttribute="trailing" secondItem="XUW-JD-eRh" secondAttribute="trailing" id="WjY-Vy-ASg"/>
@@ -199,7 +199,6 @@
                             <constraint firstItem="ApO-3q-CJL" firstAttribute="top" secondItem="XUW-JD-eRh" secondAttribute="top" id="wNz-SB-gmM"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="YzR-Ym-L7e"/>
                     <navigationItem key="navigationItem" id="hfP-9e-eIO"/>
                     <connections>
                         <outlet property="categoryListCollectionView" destination="zyT-Dk-fq6" id="ozs-K5-wWZ"/>
@@ -217,7 +216,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kuR-VZ-3xq" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2960.8695652173915" y="93.75"/>
+            <point key="canvasLocation" x="5689.8550724637689" y="93.75"/>
         </scene>
         <!--Notification View Controller-->
         <scene sceneID="ppO-n4-PGU">
@@ -258,13 +257,13 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6VB-g2-Kwf">
-                                <rect key="frame" x="20" y="152" width="374" height="710"/>
+                                <rect key="frame" x="20" y="152" width="374" height="661"/>
                                 <subviews>
                                     <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P1k-U6-lee">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="710"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="661"/>
                                         <subviews>
                                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="QIi-Ke-qA5">
-                                                <rect key="frame" x="0.0" y="0.0" width="374" height="710"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="374" height="661"/>
                                             </tableView>
                                         </subviews>
                                         <constraints>
@@ -308,47 +307,86 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wZT-gI-2XG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3708.6956521739135" y="93.75"/>
+            <point key="canvasLocation" x="6439.130434782609" y="93.75"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="BXf-L2-Kfj">
+        <!--홈-->
+        <scene sceneID="5qc-b6-nIK">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="NbB-qi-0Zd" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" systemItem="mostViewed" id="aTY-8g-IHs"/>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Obl-v8-OQW" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="홈" image="home" id="YzR-Ym-L7e">
+                        <color key="badgeColor" systemColor="labelColor"/>
+                    </tabBarItem>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="vU1-w6-5hy">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="xBp-EE-yva">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="qXg-D2-kCe" kind="relationship" relationship="rootViewController" id="m6U-HQ-n2C"/>
+                        <segue destination="kl2-x8-dQf" kind="relationship" relationship="rootViewController" id="AdL-3M-r4b"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Td7-dZ-SPl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JSo-z2-LAj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1140.5797101449277" y="93.75"/>
+            <point key="canvasLocation" x="4781.159420289855" y="93.75"/>
         </scene>
         <!--Tab Bar Controller-->
-        <scene sceneID="1Hx-b1-ItT">
+        <scene sceneID="gRQ-a9-bWM">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="1Mn-Lf-w8M" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="qXg-D2-kCe" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="HomeTabBarController" automaticallyAdjustsScrollViewInsets="NO" id="WpP-RV-4ll" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" id="XI8-B7-rNg"/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="FE7-sq-c3V">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="J6X-vN-k1E">
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="kl2-x8-dQf" kind="relationship" relationship="viewControllers" id="Jma-jb-rzM"/>
+                        <segue destination="Obl-v8-OQW" kind="relationship" relationship="viewControllers" id="vpU-uy-aC0"/>
+                        <segue destination="lql-hu-2Fr" kind="relationship" relationship="viewControllers" id="tDq-As-4aP"/>
+                        <segue destination="qcc-rx-kHx" kind="relationship" relationship="viewControllers" id="uO8-a7-qlR"/>
+                        <segue destination="8sh-GP-aez" kind="relationship" relationship="viewControllers" id="6Zi-Rr-iJ2"/>
                     </connections>
                 </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="K8k-MX-nXB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2050.7246376811595" y="93.75"/>
+            <point key="canvasLocation" x="3871.0144927536235" y="93.75"/>
+        </scene>
+        <!--MeetingList-->
+        <scene sceneID="bqv-Ol-zOi">
+            <objects>
+                <viewControllerPlaceholder storyboardName="MeetingList" id="lql-hu-2Fr" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="05M-LP-Me2"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kNt-dJ-wVf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3587" y="588"/>
+        </scene>
+        <!--MyRecord-->
+        <scene sceneID="qPg-dV-VZe">
+            <objects>
+                <viewControllerPlaceholder storyboardName="MyRecord" id="qcc-rx-kHx" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="JLH-IW-bUZ"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xzL-4y-d6F" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3927" y="588"/>
+        </scene>
+        <!--MeetingCreation-->
+        <scene sceneID="gza-Od-4B4">
+            <objects>
+                <viewControllerPlaceholder storyboardName="MeetingCreation" id="8sh-GP-aez" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="1Ut-wM-xkQ"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zAY-JB-rXU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4273" y="588"/>
         </scene>
     </scenes>
     <resources>
+        <image name="home" width="24" height="24"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
