Design: 홈, 모임리스트, 모임생성 화면 디자인
- 홈, 모임리스트, 모임생성 화면 디자인
- 서비스에 토큰 수정

--- a/jaksim_ios/MeetingList/View/MeetingList.storyboard
+++ b/jaksim_ios/MeetingList/View/MeetingList.storyboard
@@ -113,6 +113,9 @@
                                     <constraint firstAttribute="height" constant="56" id="vW4-78-PGJ"/>
                                 </constraints>
                                 <state key="normal" image="creation"/>
+                                <connections>
+                                    <action selector="meetingCreationButtonDidTap:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="N5f-ey-5ih"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
