--- a/jaksim_ios/Home/View/Home.storyboard
+++ b/jaksim_ios/Home/View/Home.storyboard
@@ -124,18 +124,21 @@
                                                 </collectionViewFlowLayout>
                                                 <cells/>
                                             </collectionView>
-                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Lib-fb-M77">
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="Lib-fb-M77">
                                                 <rect key="frame" x="0.0" y="379" width="374" height="21"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="추천 모임" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4z3-9h-6kb">
-                                                        <rect key="frame" x="0.0" y="0.0" width="187" height="21"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="63.5" height="21"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5SS-vw-WbG">
-                                                        <rect key="frame" x="187" y="0.0" width="187" height="21"/>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" pointerInteraction="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5SS-vw-WbG">
+                                                        <rect key="frame" x="322" y="0.0" width="52" height="21"/>
                                                         <state key="normal" title="전체보기"/>
+                                                        <connections>
+                                                            <action selector="showAllButtonDidTap:" destination="kl2-x8-dQf" eventType="touchUpInside" id="QCM-HT-QbP"/>
+                                                        </connections>
                                                     </button>
                                                 </subviews>
                                                 <constraints>
@@ -207,11 +210,11 @@
                         <outlet property="notiVisitedMarkView" destination="ZQl-A6-oTN" id="EeF-HG-HGN"/>
                         <outlet property="notificationButton" destination="AV0-vq-nCU" id="UyO-gK-ld8"/>
                         <outlet property="recommendedMeetingListCollectionView" destination="Dzh-rN-Syk" id="qrj-Ie-1S3"/>
-                        <outlet property="recommendedMeetingShollAllButton" destination="5SS-vw-WbG" id="w3k-RF-kW0"/>
                         <outlet property="recommendedMeetingTitleLabel" destination="4z3-9h-6kb" id="JbE-f2-zP8"/>
                         <outlet property="sayingOfTodayContaierView" destination="B82-QJ-Ez6" id="y41-QO-oED"/>
                         <outlet property="sayingOfTodayLabel" destination="0hD-lE-jR1" id="3kq-qu-Ggq"/>
                         <outlet property="sayingOfTodayTitleLabel" destination="ejB-RJ-lHT" id="pUr-Oc-mdh"/>
+                        <outlet property="showAllButton" destination="5SS-vw-WbG" id="w3k-RF-kW0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kuR-VZ-3xq" sceneMemberID="firstResponder"/>
@@ -309,11 +312,11 @@
             </objects>
             <point key="canvasLocation" x="6439.130434782609" y="93.75"/>
         </scene>
-        <!--홈-->
+        <!--Navigation Controller-->
         <scene sceneID="5qc-b6-nIK">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Obl-v8-OQW" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="홈" image="home" id="YzR-Ym-L7e">
+                    <tabBarItem key="tabBarItem" title="" id="YzR-Ym-L7e">
                         <color key="badgeColor" systemColor="labelColor"/>
                     </tabBarItem>
                     <toolbarItems/>
@@ -336,6 +339,7 @@
                 <tabBarController storyboardIdentifier="HomeTabBarController" automaticallyAdjustsScrollViewInsets="NO" id="WpP-RV-4ll" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="J6X-vN-k1E">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -383,7 +387,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="home" width="24" height="24"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
